# HTTPS-Implementation

./: CMakeLists.txt  README.md
TCPServer/: CMakeLists.txt
TCPServer/src/: TCPServer.cpp
applications/: CMakeLists.txt
applications/apps/: index.html  tictactoe.html
applications/src/: tictactoe.cpp
httpserver/: CMakeLists.txt
httpserver/include/: HTTPRequest.hpp  HTTPResponse.hpp  HTTPServer.hpp
httpserver/src/: HTTPRequest.cpp  HTTPResponse.cpp  HTTPServer.cpp
tcpclient/: CMakeLists.txt
tcpclient/src/: TCPClient.cpp
tcpserver/: CMakeLists.txt
tcpserver/include/: Clientstate.hpp  TCPServer.hpp
tcpserver/src/: TCPServer.cpp  main.cpp
